# CppLittleExercises

./: .gitignore  .gitmodules  README.md  dev.sh  environment.yml  gcc.yml
BoostPointers/: CMakeLists.txt  main.cpp
BoostPointers/src/: CMakeLists.txt  letterfrequencycalculator.cpp  letterfrequencycalculator.h
BoostPointers/test/: CMakeLists.txt  letterfrequencycalculator.cpp
FastCGI/: MakeTest  Makefile  README
FastCGI/src/: FastCGI.cpp  FizzBuzz.cpp
FizzBuzz/: MakeTest  Makefile  README  fizzbuzz
FizzBuzz/tst/: .Main.cpp.swp
IntegerList/: .exrc  CMakeLists.txt  MakeTest  Makefile  README
IntegerList/include/: IntegerList.hpp
IntegerList/src/: IntegerList.cpp  IntegerList.hpp
IntegerList/tst/: TestSuite.cpp
SerializeTree/: CMakeLists.txt  MakeTest  Makefile  README
SerializeTree/src/: CMakeLists.txt  Tree.cpp  Tree.hpp  TreeNode.cpp  main.cpp
SerializeTree/tst/: CMakeLists.txt  FizzBuzzTest.cpp  test.cpp
SmartPointer/: CMakeLists.txt  Makefile  README  README.md  SmartPointer.cbp  SmartPointer.layout  main.cpp
SmartPointer/docs/: architecture.uml
SmartPointer/src/: Event.cpp  Event.hpp  FizzBuzz.cpp  Observable.cpp  Observable.hpp  Observer.cpp  Observer.hpp  main.cpp
autotools_examples/: Makefile.am  Makefile.in  configure  configure.ac
autotools_examples/src/: main.cpp
boost_log/: CMakeLists.txt
boost_log/src/: CMakeLists.txt  main.cpp
c_hash/: CMakeLists.txt  counter.c  main.c
c_json/: CMakeLists.txt  main.c
c_python_signal_handling/: CMakeLists.txt  README.md  lib.cpp  main.cpp  module.py
caesar_cypher/: Makefile  main.cpp
circular_buffer/: CMakeLists.txt  cbuffer.hpp  main.cpp
command/: CMakeLists.txt  command.hpp  main.cpp
cpp_functional/: CMakeLists.txt  main.cpp
cpp_matrix_python_wrapper/: CMakeLists.txt  matrix2d.cpp  matrix2d.hpp  py_matrix.cpp  script.py
cuda/: CMakeLists.txt  build.sh  main.cpp  main.cu  main.cuh
cuda_matmul/: build.sh  main.cpp  main.cu  main.cuh
cuda_template_project/: CMakeLists.txt  main.cu  main.cuh
curl/: CMakeLists.txt
curl/include/: netclient.hpp
curl/src/: netclient.cpp
dlopen/: CMakeLists.txt  README.md  lib1.cpp  lib1.hpp  lib2.cpp  lib2.hpp  main.cpp
exampleCppUnit/: ExampleTests.cpp  Makefile  README
findDuplicates/: .gitignore  CMakeLists.txt  MakeTest  Makefile  README
findDuplicates/src/: Application.cpp  CMakeLists.txt  FindDuplicates.cpp  FindDuplicates.hpp  Makefile
findDuplicates/tst/: CMakeLists.txt  FindDuplicatesTest.cpp  Makefile
gsl_vector/: CMakeLists.txt  main.cpp
kata_1_binary_search/: MakeTest  Makefile
kata_1_binary_search/Default/: makefile  sources.mk
kata_1_binary_search/Default/src/: subdir.mk
kata_1_binary_search/Default/tst/: subdir.mk
kata_1_binary_search/src/: Application.cpp  BinarySearch.cpp  BinarySearch.hpp
kata_1_binary_search/tst/: BinarySearchTest.cpp  Main.cpp
libjit/: CMakeLists.txt  README.md  dev.yml  main.cpp
libpng/: CMakeLists.txt  main.cpp
metaprogramming/: CMakeLists.txt  main.cpp
mxnet_cpp/: CMakeLists.txt  main.cpp  main_cpp.cpp  main_cpu.cpp  main_gpu.cpp
openGlTest/: Makefile  README
openGlTest/src/: Application.cpp  Particle.cpp  Particle.hpp  ParticleEngine.cpp  ParticleEngine.hpp
qt/MyFirstQtApplication/: CMakeLists.txt
qt/MyFirstQtApplication/src/: CMakeLists.txt  Window.cpp  Window.hpp  main.cpp
read_from_stream/: CMakeLists.txt  main.cpp
scheduller/: CMakeLists.txt  main.cpp
templateProject/src/: FizzBuzz.hpp
templateProjectMake/: Makefile
templateProjectMake/src/: FizzBuzz.cpp
templates_explicit_instantiation/: CMakeLists.txt  README.md  main.cpp  template.hpp  template_def.hpp  template_inst.cpp
thrift_server/: CMakeLists.txt  generate.sh
thrift_server/gen-cpp/: Catalog.cpp  Catalog.h  Catalog_server.skeleton.cpp  books_types.cpp  books_types.h
thrift_server/if/: books.thrift
thrift_server/src/: client.cpp  server.cpp
topk/: CMakeLists.txt
topk/include/: topk.hpp
topk/python/: CMakeLists.txt  py_bindings.cpp
toposort/: CMakeLists.txt  toposort.cpp
