CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT(BOOST_LOG LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE RelWithDebInfo)
endif()

find_package(Boost COMPONENTS system thread log REQUIRED)

ADD_SUBDIRECTORY(src)
